--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body{
     text-align: left;
     font-size: 16px;
-    color: gray;
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
 }
 
